fee, debit/credit, update import/export

--- a/assets/l10n/en_US.json
+++ b/assets/l10n/en_US.json
@@ -260,6 +260,21 @@
     "enum.CSVHeadersV1@transactionDate": "Transaction date",
     "enum.CSVHeadersV1@extra": "Extra (JSON)",
 
+    "enum.CSVHeadersV2": "CSV Headers",
+    "enum.CSVHeadersV2@uuid": "ID",
+    "enum.CSVHeadersV2@title": "Title",
+    "enum.CSVHeadersV2@amount": "Amount",
+    "enum.CSVHeadersV2@currency": "Currency",
+    "enum.CSVHeadersV2@account": "Account",
+    "enum.CSVHeadersV2@accountUuid": "Account ID",
+    "enum.CSVHeadersV2@category": "Category",
+    "enum.CSVHeadersV2@categoryUuid": "Category ID",
+    "enum.CSVHeadersV2@createdDate": "Created date",
+    "enum.CSVHeadersV2@transactionDate": "Transaction date",
+    "enum.CSVHeadersV2@relatedDebtUuid": "Obligation ID",
+    "enum.CSVHeadersV2@relatedDebtParty": "Debter/Creditor",
+    "enum.CSVHeadersV2@extra": "Extra (JSON)",
+
     "enum.ImportV1Progress@waitingConfirmation": "Waiting for confirmation",
     "enum.ImportV1Progress@erasing": "Erasing current data",
     "enum.ImportV1Progress@writingCategories": "Writing categories",
@@ -268,6 +283,17 @@
     "enum.ImportV1Progress@writingTransactions": "Writing transactions",
     "enum.ImportV1Progress@success": "Success",
     "enum.ImportV1Progress@error": "Something went wrong ({error})",
+
+    "enum.ImportV2Progress@waitingConfirmation": "Waiting for confirmation",
+    "enum.ImportV2Progress@erasing": "Erasing current data",
+    "enum.ImportV2Progress@writingCategories": "Writing categories",
+    "enum.ImportV2Progress@writingAccounts": "Writing accounts",
+    "enum.ImportV2Progress@writingTransactionFeePresets": "Writing transaction fee presets",
+    "enum.ImportV2Progress@writingDebts": "Writing debits/credits",
+    "enum.ImportV2Progress@resolvingTransactions": "Soring out transactions",
+    "enum.ImportV2Progress@writingTransactions": "Writing transactions",
+    "enum.ImportV2Progress@success": "Success",
+    "enum.ImportV2Progress@error": "Something went wrong ({error})",
 
     "enum.BackupEntryType@manual": "Manual",
     "enum.BackupEntryType@manual.description": "Backup created by user",
