--- a/assets/l10n/it_IT.json
+++ b/assets/l10n/it_IT.json
@@ -259,6 +259,21 @@
     "enum.CSVHeadersV1@transactionDate": "Data transazione",
     "enum.CSVHeadersV1@extra": "Extra (JSON)",
 
+    "enum.CSVHeadersV2": "Intestazioni CSV",
+    "enum.CSVHeadersV2@uuid": "ID",
+    "enum.CSVHeadersV2@title": "Titolo",
+    "enum.CSVHeadersV2@amount": "Importo",
+    "enum.CSVHeadersV2@currency": "Valuta",
+    "enum.CSVHeadersV2@account": "Conto",
+    "enum.CSVHeadersV2@accountUuid": "ID Conto",
+    "enum.CSVHeadersV2@category": "Categoria",
+    "enum.CSVHeadersV2@categoryUuid": "ID Categoria",
+    "enum.CSVHeadersV2@createdDate": "Data di creazione",
+    "enum.CSVHeadersV2@transactionDate": "Data transazione",
+    "enum.CSVHeadersV2@relatedDebtUuid": "ID Obblighi connessi",
+    "enum.CSVHeadersV2@relatedDebtParty": "Creditore/Debitore",
+    "enum.CSVHeadersV2@extra": "Extra (JSON)",
+
     "enum.ImportV1Progress@waitingConfirmation": "In attesa di conferma",
     "enum.ImportV1Progress@erasing": "Cancellazione dei dati correnti",
     "enum.ImportV1Progress@writingCategories": "Scrittura delle categorie",
@@ -267,6 +282,17 @@
     "enum.ImportV1Progress@writingTransactions": "Scrittura delle transazioni",
     "enum.ImportV1Progress@success": "Successo",
     "enum.ImportV1Progress@error": "Qualcosa è andato storto ({error})",
+
+    "enum.ImportV2Progress@waitingConfirmation": "In attesa di conferma",
+    "enum.ImportV2Progress@erasing": "Cancellazione dei dati correnti",
+    "enum.ImportV2Progress@writingCategories": "Scrittura delle categorie",
+    "enum.ImportV2Progress@writingAccounts": "Scrittura dei conti",
+    "enum.ImportV2Progress@writingTransactionFeePresets": "Scrittura delle commissioni predefinite",
+    "enum.ImportV2Progress@writingDebts": "Scrittura di debiti e crediti",
+    "enum.ImportV2Progress@resolvingTransactions": "Risoluzione delle transazioni",
+    "enum.ImportV2Progress@writingTransactions": "Scrittura delle transazioni",
+    "enum.ImportV2Progress@success": "Successo",
+    "enum.ImportV2Progress@error": "Qualcosa è andato storto ({error})",
 
     "enum.BackupEntryType@manual": "Manuale",
     "enum.BackupEntryType@manual.description": "Backup creato dall'utente",
