--- a/assets/l10n/mn_MN.json
+++ b/assets/l10n/mn_MN.json
@@ -260,6 +260,21 @@
     "enum.CSVHeadersV1@transactionDate": "Гүйлгээ хийсэн ({})",
     "enum.CSVHeadersV1@extra": "Нэмэлт(JSON)",
 
+    "enum.CSVHeadersV2": "CSV Толгой",
+    "enum.CSVHeadersV2@uuid": "Код",
+    "enum.CSVHeadersV2@title": "Гарчиг",
+    "enum.CSVHeadersV2@amount": "Дүн",
+    "enum.CSVHeadersV2@currency": "Валют",
+    "enum.CSVHeadersV2@account": "Данс",
+    "enum.CSVHeadersV2@accountUuid": "Дансны код",
+    "enum.CSVHeadersV2@category": "Ангилал",
+    "enum.CSVHeadersV2@categoryUuid": "Ангилалын код",
+    "enum.CSVHeadersV2@createdDate": "Нэмсэн огноо ({})",
+    "enum.CSVHeadersV2@transactionDate": "Гүйлгээ хийсэн ({})",
+    "enum.CSVHeadersV2@relatedDebtUuid": "Тооцоо",
+    "enum.CSVHeadersV2@relatedDebtParty": "Тооцоот этгээд",
+    "enum.CSVHeadersV2@extra": "Нэмэлт(JSON)",
+
     "enum.ImportV1Progress@waitingConfirmation": "Баталгаажуулалт хүлээж байна",
     "enum.ImportV1Progress@erasing": "Хуучин өгөгдлийг цэвэрлэж байна",
     "enum.ImportV1Progress@writingCategories": "Ангиллуудыг бичиж байна",
@@ -268,6 +283,17 @@
     "enum.ImportV1Progress@writingTransactions": "Гүйлгээнүүдийг бичиж байна",
     "enum.ImportV1Progress@success": "Амжилттай",
     "enum.ImportV1Progress@error": "Алдаа гарлаа ({error})",
+
+    "enum.ImportV2Progress@waitingConfirmation": "Баталгаажуулалт хүлээж байна",
+    "enum.ImportV2Progress@erasing": "Хуучин өгөгдлийг цэвэрлэж байна",
+    "enum.ImportV2Progress@writingCategories": "Ангиллуудыг бичиж байна",
+    "enum.ImportV2Progress@writingAccounts": "Данснуудыг бичиж байна",
+    "enum.ImportV2Progress@writingTransactionFeePresets": "Шимтгэлийн тохиргоог бичиж байна",
+    "enum.ImportV2Progress@writingDebts": "Өр, авлагуудыг бичиж байна",
+    "enum.ImportV2Progress@resolvingTransactions": "Гүйлгээнүүдийг хуваарилж байна",
+    "enum.ImportV2Progress@writingTransactions": "Гүйлгээнүүдийг бичиж байна",
+    "enum.ImportV2Progress@success": "Амжилттай",
+    "enum.ImportV2Progress@error": "Алдаа гарлаа ({error})",
 
     "enum.BackupEntryType@manual": "Хэрэглэгч үүсгэсэн",
     "enum.BackupEntryType@manual.description": "Хэрэглэгч өөрөө үүсгэсэн нөөц",
