update missing it_IT keys

--- a/assets/l10n/it_IT.json
+++ b/assets/l10n/it_IT.json
@@ -226,7 +226,8 @@
     "sync.export.autoBackup.iCloudAlreadySyncs": "Se usi Flow su iOS o macOS, i tuoi dati saranno sincronizzati con il tuo iCloud",
     "sync.export.onDeviceWarning": "Tutti i backup sono memorizzati sul dispositivo, il che significa che quando disinstalli Flow o reimposti il tuo dispositivo, tutti i backup saranno persi!",
     "sync.export.history": "Cronologia backup",
-    "sync.export.history.empty": "Non ci sono backup",
+    "sync.export.history.empty": "Non hai backup",
+    "sync.export.history.empty.description": "I backup eseguiti manualmente e automaticamente verranno elencati qui",
     "sync.export.history.description": "Vedi i backup fatti da te e creati automaticamente",
     "sync.export.success": "Esportazione riuscita!",
     "sync.export.success.filePath[0]": "Salvato in ",
