--- a/assets/l10n/mn_MN.json
+++ b/assets/l10n/mn_MN.json
@@ -150,6 +150,7 @@
     "preferences.theme.choose": "Үзэмж сонгох",
     "preferences.theme.light": "Гэгээлэг",
     "preferences.theme.dark": "Харанхуй",
+    "preferences.theme.dynamic": "Хувирдаг",
     "preferences.numpad": "Тоон товчлуур",
     "preferences.numpad.layout": "Тооны байрлал",
     "preferences.numpad.layout.classic": "Хуучны",
